chor: add custom types and reinstall dependencies

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,9 +12,10 @@
       "noEmit": true,
       "allowImportingTsExtensions": true,
       "forceConsistentCasingInFileNames": true,
+      "types": ["node"],
       "typeRoots": [
         "./node_modules/@types",
-        "./src/types/express.d.ts"
+        "./src/types"
       ],
       "baseUrl": "./",
       "paths": {
