--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/csurf": "^1.11.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.0",
     "@types/express-validator": "^3.0.0",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.7.7",
     "@types/nodemailer": "^6.4.16",
     "@types/xss-filters": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
