--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "description": "Server for managing the backend",
   "main": "index.ts",
   "scripts": {
-    "start": "node --loader ts-node/esm ./src/index.ts",
+    "start": "tsx ./src/index.ts",
     "dev": "tsx watch ./src/index.ts",
     "build": "tsc --project ./tsconfig.json",
     "lint": "eslint .",
