--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "myFinance App for managing income and expenses",
   "scripts": {
+    "postinstall": "npm install @types/node --save-dev",
     "build": "npm run build:server && npm run build:client",
     "build:server": "cd server && npm run build",
     "build:client": "cd client && npm run build",
     "start": "npm run start:server",
     "start:server": "cd server && npm run start",
-    "start:client": "cd client && npm run start",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run dev"
