--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "myFinance App for managing income and expenses",
   "scripts": {
     "postinstall": "npm install @types/node --save-dev",
-    "build": "npm run build:server && npm run build:client",
+    "build": "tsc --project ./server/tsconfig.json --noEmit && npm run build:server && npm run build:client",
     "build:server": "cd server && npm run build",
     "build:client": "cd client && npm run build",
     "start": "npm run start:server",
@@ -16,6 +16,9 @@
   "keywords": [],
   "author": "Ivan Sarabeev",
   "license": "ISC",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
