--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,8 +9,7 @@
       "strict": false,
       "skipLibCheck": true,
       "allowSyntheticDefaultImports": true,
-      "noEmit": true,
-      "allowImportingTsExtensions": true,
+      "noEmit": false,
       "forceConsistentCasingInFileNames": true,
       "types": ["node"],
       "typeRoots": [
@@ -30,5 +29,5 @@
       }
     },
     "include": ["src"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist"]
   }
