--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,41 @@
-version: '3.8'
+version: '3'
 services:
-  server:
-    build:
-      context: ./server
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
-      NODE_ENV: production
-      PORT: 3000
-    command: ["npx", "tsx", "./src/index.ts"]  # Ensure this matches your server start command
-    depends_on:
-      - client
-
-  client:
-    build:
+  react-app:
+    # image: react-app
+    build: 
       context: ./client
       dockerfile: Dockerfile
+    stdin_open: true
     ports:
       - "8080:8080"
-    environment:
-      NODE_ENV: production
-      PORT: 8080
-    command: ["npm", "run", "dev"]
+    networks:
+      - mern-app
+
+  api-server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile 
+    ports:
+      - "3000:3000"
+    env_file:
+      - .env # Load variables from the .env file
+    networks:
+      - mern-app
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo:3.6.19-xenial
+    ports:
+      - "27017:27017"
+    networks:
+      - mern-app
+    volumes:
+      - mongo-data:/data/db
+  
+networks:
+  mern-app:
+    driver: bridge
+volumes:
+  mongo-data:
+    driver: local
