--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
   "description": "Server for managing the backend",
   "main": "index.ts",
   "scripts": {
-    "start": "tsx src/index.ts",
-    "dev": "tsx watch ./src/index.ts",
-    "build": "tsc --project ./tsconfig.json",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,10 +25,10 @@
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.5.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.2.3",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
     "tsconfig-paths": "^4.2.0",
     "xss": "^1.0.15",
@@ -45,17 +44,14 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^22.7.4",
     "@types/nodemailer": "^6.4.16",
     "@types/xss-filters": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^9.12.0",
     "globals": "^15.10.0",
-    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.0"
   }
 }
