--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.453.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
+    "myfinance.eu": "file:..",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
