--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "myFinance App for managing income and expenses",
   "scripts": {
     "postinstall": "npm install @types/node --save-dev",
-    "build": "npm run build:server && npm run build:client",
-    "build:server": "cd server && npm run build",
-    "build:client": "cd client && npm run build",
-    "start": "npm run start:server",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "start": "node server/src/index.js",
     "start:server": "cd server && npm run start",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "cd server && npm run dev",
-    "dev:client": "cd client && npm run dev"
+    "dev": "nodemon server/sec/index.js"
   },
   "keywords": [],
   "author": "Ivan Sarabeev",
@@ -51,6 +47,7 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.8.1",
     "@types/nodemailer": "^6.4.16",
     "@types/xss-filters": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
