--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.4",
