--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/clientjs": "^0.2.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "clientjs": "^0.2.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
