feat: implmented helmet, fixed cors errors and added validation
fixed the back-end data flow, optimized code and it's useage, started implementing client otp, custom axios requestes and dialog

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,6 +14,7 @@
       "@/lib/*": ["./src/lib/*"],
       "@/stores/*": ["./src/stores/*"],
       "@/types/*": ["./src/types/*"],
+      "@/utils/*": ["./src/utils/*"],
     },
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
