--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.0.0",
+    "cors": "^2.8.5",
     "csurf": "^1.2.2",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
