--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.1",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
