--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,7 +26,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "types": ["jest"],
   }, 
-    "include": ["src", "vite-env.d.ts", "declarations.d.ts"],
+    "include": ["src", "vite-env.d.ts", "declarations.d.ts", "jest.config.ts"],
     "references": [{ "path": "./tsconfig.node.json"}]
 }
