--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@types/clientjs": "^0.2.2",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clientjs": "^0.2.1",
     "clsx": "^2.1.1",
@@ -35,18 +35,18 @@
     "formik": "^2.4.6",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
-    "mobx": "^6.13.5",
-    "mobx-react-lite": "^4.0.7",
+    "mobx": "^6.13.6",
+    "mobx-react-lite": "^4.1.0",
     "myfinance.eu": "file:..",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
-    "react-router-dom": "^6.27.0",
+    "react-router": "^7.1.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -59,8 +59,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
