--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.66.0",
     "@types/clientjs": "^0.2.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@tanstack/eslint-plugin-query": "^5.66.1",
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
