--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@arcjet/node": "^1.0.0-beta.2",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.0.0",
@@ -49,7 +50,7 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.8",
     "@types/nodemailer": "^6.4.16",
     "@types/xss-filters": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
