--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@arcjet/node": "^1.0.0-beta.2",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.4.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
