--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@arcjet/node": "^1.0.0-beta.2",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.4.1",
     "cookie-parser": "^1.0.0",
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
@@ -27,11 +28,14 @@
     "express": "^4.21.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.1",
+    "express-validation": "^4.1.1",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.2.3",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
