--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "csurf": "^1.2.2",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
