--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "csurf": "^1.2.2",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.1",
